--- a/public/frontend/files/plugins/home-custom.css
+++ b/public/frontend/files/plugins/home-custom.css
@@ -149,13 +149,20 @@
 .giatricotloi .iteam_row ul li{ list-style:circle; margin-bottom:10px; margin-left:20px }
 .giatricotloi .left{ display:flex; align-items: center; }
 
-.lanhdao{ padding:30px 0px }
+.lanhdao{ padding:60px 0px }
 .lanhdao .title{ text-align:left; margin-bottom:30px }
-.lanhdao .img img{ width:100% }
-.lanhdao h3{ font-size:1.4rem; color:var(--main-color); }
-.lanhdao h4{ font-size:1.2rem }
-.lanhdao{}
-.lanhdao{}
+.lanhdao .img img{ width:350px; height:350px; border-radius:100%; object-fit:cover; }
+.lanhdao h3{ font-size:1.8rem; color:var(--main-color); margin-bottom:20px; font-weight:bold; }
+.lanhdao h4{ font-size:1.2rem; margin-bottom:20px;  }
+.lanhdao .info img{ height:40px; width:auto; margin-bottom:10px }
+
+.chuongtrinhhoc{ position:relative; padding:70px 0px; }
+.chuongtrinhhoc:before{ position:absolute; content:""; background:var(--main-color); width: calc(100% / 3); height: 100%; right:0; top:0 }
+.chuongtrinhhoc .img{ text-align:center; }
+.chuongtrinhhoc .img img{ width:350px; height:350px; object-fit:cover; border-radius:10px; margin:auto; }
+.chuongtrinhhoc .info{ flex-direction: column;justify-content: center; display:flex; }
+.chuongtrinhhoc .info h4{ margin-bottom:20px; text-align:left; }
+
 
 .timeline-box .timeline-arrows {
     width: 100%;
