--- a/public/frontend/files/plugins/home-custom.css
+++ b/public/frontend/files/plugins/home-custom.css
@@ -164,6 +164,31 @@
 .chuongtrinhhoc .info h4{ margin-bottom:20px; text-align:left; }
 
 
+.owl-carousel button.owl-dot {
+    width: 10px;
+    height: 10px;
+    border-radius: 50%;
+    margin: 0 5px;
+    background-color: #e0e2e3;
+    border:2px solid #fff;
+}
+.owl-carousel button.owl-dot.active {
+    width: 35px;
+    height: 10px;
+    background-color: var(--main-color) !important;
+    border-radius: 20px;
+    border: 0px solid #e0e2e3;
+}
+.owl-dots {
+    position: absolute;
+    margin-left: auto;
+    margin-right: auto;
+    left: 0;
+    right: 0;
+    text-align: center;
+    bottom: 0px;
+}
+
 .timeline-box .timeline-arrows {
     width: 100%;
     height: 56px;
