--- a/public/frontend/files/plugins/home-custom.css
+++ b/public/frontend/files/plugins/home-custom.css
@@ -68,7 +68,7 @@
 }
 .main_hotel p{ margin-bottom:0px; text-align:center; }
 .main_hotel .logo-home{ text-align:center; margin-top:50px; margin-bottom:20px }
-.main_hotel .logo-home img{ height:100px }
+.main_hotel .logo-home img{ height:85px }
 .main_hotel .owl-carousel .row_itemw{ text-align:center; margin-top:40px }
 .main_hotel .owl-carousel .row_itemw h3{ font-size:1rem; color:var(--main-color); font-weight:bold; }
 .main_hotel .owl-carousel .row_itemw i{ color:var(--main-color); font-size:1.9rem; margin-bottom:20px;}
@@ -136,6 +136,7 @@
 }
 
 .tamnhin{ padding:40px 0px }
+.tamnhin .img{ text-align:right; }
 .tamnhin .title{ text-align:left; }
 .tamnhin .iteam_row{ display:flex; align-items: center; margin:30px 0px }
 
@@ -157,7 +158,7 @@
 .lanhdao .info img{ height:40px; width:auto; margin-bottom:10px }
 
 .chuongtrinhhoc{ position:relative; padding:70px 0px; }
-.chuongtrinhhoc:before{ position:absolute; content:""; background:var(--main-color); width: calc(100% / 3); height: 100%; right:0; top:0 }
+.chuongtrinhhoc:before{ position:absolute; content:""; background:var(--main-color); width: calc(100% / 3); height: 100%; left:0; top:0 }
 .chuongtrinhhoc .img{ text-align:center; }
 .chuongtrinhhoc .img img{ width:350px; height:350px; object-fit:cover; border-radius:10px; margin:auto; }
 .chuongtrinhhoc .info{ flex-direction: column;justify-content: center; display:flex; }
