--- a/public/frontend/files/plugins/header.css
+++ b/public/frontend/files/plugins/header.css
@@ -6,22 +6,27 @@
 #cssmenu #head-mobile{display:none}
 #cssmenu > ul > li{float:left}
 #cssmenu > ul > li > a{padding:22px;font-size:14px;letter-spacing:1px;text-decoration:none;color:#fff;font-weight:700; text-transform: uppercase;}
-#cssmenu > ul > li:hover > a,#cssmenu ul li.active a{color:#fff; background: var(--sub-color);}
-#cssmenu > ul > li:hover,#cssmenu ul li.active:hover,#cssmenu ul li.active,#cssmenu ul li.has-sub.active:hover{background:var(--sub-color)!important;-webkit-transition:background .3s ease;-ms-transition:background .3s ease;transition:background .3s ease;}
+#cssmenu > ul > li:hover > a,#cssmenu ul li.active a{
+/*    border-bottom: 2px solid;*/
+}
+#cssmenu > ul > li:hover,#cssmenu ul li.active:hover,#cssmenu ul li.active,#cssmenu ul li.has-sub.active:hover{
+
+}
+
 #cssmenu > ul > li.has-sub > a{padding-right:30px}
 #cssmenu > ul > li.has-sub > a:after{position:absolute;top:28px;right:11px;width:8px;height:2px;display:block;background:#ddd;content:''}
 #cssmenu > ul > li.has-sub > a:before{position:absolute;top:25px;right:14px;display:block;width:2px;height:8px;background:#ddd;content:'';-webkit-transition:all .25s ease;-ms-transition:all .25s ease;transition:all .25s ease}
 #cssmenu > ul > li.has-sub:hover > a:before{top:23px;height:0}
 #cssmenu ul ul{position:absolute;left:-9999px}
-#cssmenu ul ul li{-webkit-transition:all .25s ease;-ms-transition:all .25s ease;background:var(--sub-color);transition:all .25s ease}
+#cssmenu ul ul li{-webkit-transition:all .25s ease;-ms-transition:all .25s ease;background:#fff;transition:all .25s ease}
 #cssmenu ul ul li:hover{}
 #cssmenu li:hover > ul{left:auto}
 #cssmenu li:hover > ul > li{
     border-bottom: 1px dashed #ffffff47;}
 #cssmenu ul ul ul{margin-left:100%;top:0}
-#cssmenu ul ul li a{border-bottom:1px solid rgba(150,150,150,0.15);padding:18px 15px;width:245px;font-size:12px;text-decoration:none;color:#fff;font-weight:400; line-height: 1.2rem; text-transform: uppercase;}
+#cssmenu ul ul li a{border-bottom:1px solid rgba(150,150,150,0.15);padding:18px 15px;width:245px;font-size:12px;text-decoration:none;color:var(--main-color);font-weight:400; line-height: 1.2rem; text-transform: uppercase;}
 #cssmenu ul ul li:last-child > a,#cssmenu ul ul li.last-item > a{border-bottom:0}
-#cssmenu ul ul li:hover > a,#cssmenu ul ul li a:hover{color:#fff}
+#cssmenu ul ul li:hover > a,#cssmenu ul ul li a:hover{color:var(--main-color);}
 #cssmenu ul ul li.has-sub > a:after{position:absolute;top:16px;right:11px;width:8px;height:2px;display:block;background:#ddd;content:''}
 #cssmenu ul ul li.has-sub > a:before{position:absolute;top:13px;right:14px;display:block;width:2px;height:8px;background:#ddd;content:'';-webkit-transition:all .25s ease;-ms-transition:all .25s ease;transition:all .25s ease}
 #cssmenu ul ul > li.has-sub:hover > a:before{top:17px;height:0}
