--- a/public/frontend/files/plugins/home-custom.css
+++ b/public/frontend/files/plugins/home-custom.css
@@ -168,6 +168,7 @@
 .chuongtrinhhoc .info{ flex-direction: column;justify-content: center; display:flex; }
 .chuongtrinhhoc .info h4{ margin-bottom:20px; text-align:left; }
 
+.anh{ background-image: linear-gradient(0deg , #c4d0db5c, #fff); padding:30px 0px }
 .anh .img{ text-align:center; }
 .anh .img img{ height:300px }
 .anh p{ text-align:center; font-weight:bold; font-size:1.3rem; margin:20px auto; }
