--- a/public/frontend/content/Css/style.css
+++ b/public/frontend/content/Css/style.css
@@ -13,16 +13,18 @@
 .row-8
 { padding:50px 0px; }
 
+h2{ text-align:center; font-size:1.5rem; color:var(--main-color); font-weight:bold; }
+
 .row-2 .col-lg-4{ position:relative; }
 .row-2 .img img{ height:450px; object-fit:cover; border-radius:100px 10px 100px 10px }
 .row-2 .col-lg-4 .content{ position:absolute; top:60px; left:-250px; background: var(--main-color); padding:30px; color:#fff; border-radius:10px }
-.row-2 .content h2{ font-size:1.2rem; font-weight:bold; margin-bottom:15px }
+.row-2 .content h2{ font-size:1.2rem; font-weight:bold; margin-bottom:15px; color:#fff; text-align:left; }
 .row-2 .content p{ font-size:.9rem; margin-bottom:3px; line-height:19px }
 
-h2{ text-align:center; font-size:1.5rem; color:var(--main-color); font-weight:bold; }
+
 .row-3 .subtile{ text-align:center; margin-bottom:25px }
 .row-3 .list_item{ display:flex; }
-.row-3 .list_item .iteam{ box-shadow:0px 2px 2px 2px #ddd; padding:20px 10px; border-radius:5px; border-top:3px solid var(--sub-color); margin:5px }
+.row-3 .list_item .iteam{ box-shadow:0px 2px 2px 2px #ddd; padding:20px 10px; border-radius:5px; border-top:3px solid var(--sub-color); margin:5px; background:#fff }
 .row-3 .list_item .iteam i{ color:var(--sub-color); margin-left:10px; font-size:3rem; margin-bottom:10px }
 .row-3 .list_item .iteam h4{ font-size:1.2rem; font-weight:bold; height:47px; padding:0px 5px }
 .row-3 .list_item .iteam p{ text-align:justify; height:96px; overflow:auto; padding:0px 5px }
