--- a/public/frontend/content/Css/style.css
+++ b/public/frontend/content/Css/style.css
@@ -14,6 +14,10 @@
 { padding:50px 0px; }
 
 h2{ text-align:center; font-size:1.5rem; color:var(--main-color); font-weight:bold; }
+.style-4::-webkit-scrollbar{width: 5px;background-color: #f5f5f5;}
+.style-4::-webkit-scrollbar-track {-webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);background-color: #f5f5f5;}
+.style-4::-webkit-scrollbar-thumb {background-color: var(--sub-color);}
+
 
 .row-2 .col-lg-4{ position:relative; }
 .row-2 .img img{ height:450px; object-fit:cover; border-radius:100px 10px 100px 10px }
@@ -23,7 +27,6 @@ h2{ text-align:center; font-size:1.5rem; color:var(--main-color); font-weight:bo
 .row-2 .content p:after {content: "";position: absolute;left: 0;top: 6px; width: 6px; height: 6px; background: #fff; border-radius: 100%}
 
 
-
 .row-3 .subtile{ text-align:center; margin-bottom:25px }
 .row-3 .list_item{ display:flex; }
 .row-3 .list_item .iteam{ box-shadow:0px 2px 2px 2px #ddd; padding:20px 10px; border-radius:5px; border-top:3px solid var(--main-color); margin:5px; background:#fff }
@@ -31,9 +34,9 @@ h2{ text-align:center; font-size:1.5rem; color:var(--main-color); font-weight:bo
 .row-3 .list_item .iteam h4{ font-size:1.2rem; font-weight:bold; height:47px; padding:0px 5px }
 .row-3 .list_item .iteam p{ text-align:justify; height:96px; overflow:auto; padding:0px 5px }
 
-.style-4::-webkit-scrollbar{width: 5px;background-color: #f5f5f5;}
-.style-4::-webkit-scrollbar-track {-webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);background-color: #f5f5f5;}
-.style-4::-webkit-scrollbar-thumb {background-color: var(--sub-color);}
+.row-4 h2{ margin-bottom:20px }
+.row-4 h4{ margin-bottom:20px }
+.row-4 .content{ padding:40px; background:var(--main-color); color:#fff; height:300px; display:flex; flex-direction: column; justify-content: center; border-radius:50px 10px 50px 10px }
 
 .row-7 h2{ margin-bottom:20px }
 .row-7 .card{ border:none }
