--- a/public/frontend/content/Css/style.css
+++ b/public/frontend/content/Css/style.css
@@ -69,7 +69,7 @@ h2{ text-align:center; font-size:1.5rem; color:var(--main-color); font-weight:bo
 .row-7 .img img{ height:100%; object-fit:cover; }
 
 .row-8 h2{ margin-bottom:20px }
-.row-8 img{ border-radius:4px 4px 0px 0px }
+.row-8 img{ border-radius:4px 4px 0px 0px; height:400px; object-fit:cover; }
 .row-8 h3{ background:var(--main-color); color:#fff; text-align:center; font-size:1.1rem; padding:10px; border-radius:0px 0px 4px 4px }
 
 .row-9 h2{ margin-bottom:20px }
