--- a/public/frontend/files/plugins/header.css
+++ b/public/frontend/files/plugins/header.css
@@ -35,7 +35,7 @@
 #cssmenu > ul > li.has-sub > ul > li.active > a,#cssmenu > ul ul > li.has-sub > ul > li.active> a{border-top:1px solid #333}
 
 @media screen and (max-width:1000px){
-.logo{position:absolute;top:0;left: 0;width:100%;height:46px;text-align:center;padding:10px 0 0 0 ;float:none}
+/*.logo{position:absolute;top:0;left: 0;width:100%;height:46px;text-align:center;padding:10px 0 0 0 ;float:none}*/
 .logo2{display:none}
 nav{width:100%;}
 #cssmenu{width:100%; height: 54px;}
