--- a/public/frontend/files/plugins/responsive.css
+++ b/public/frontend/files/plugins/responsive.css
@@ -15,7 +15,7 @@
 
 @media(max-width:414px){
 	.header_banner .owl-carousel img{ height: 170px }
-	.main_hotel{ padding: 40px 0px !important }
+	.main_hotel{ padding: 30px 0px !important }
 	.section312311 .background { padding: 20px 25px;}
 	.section31231 .text h3{ font-size: 1.5rem }
 	.section31231 .form h4 {font-size: 1.4rem;}
@@ -26,4 +26,15 @@
 	.section157 ul li {margin: 12px 0px !important;}
 	.section57 ul li {font-size: 1rem;}
 	.section56 {margin-top: -10px;}
+	.video-bg{ height:50vh }
+	.title {font-size: 1.3rem;}
+	.title span:after { height: 2px; top: 120%;}
+	.main_hotel p{ text-align:justify; }
+	.anh p{ font-size:1.1rem }
+	.sumenh .a1211{ flex-direction: column; }
+	.sumenh .a1211 .iteam_row{ width:100%; margin-bottom:20px }
+	.sumenh .row{ flex-direction: column-reverse; }
+	.giatricotloi .img img{ height:auto; }
+	.chuongtrinhhoc:before{ width:100%; height:35%; }
+	.chuongtrinhhoc .img img{ width:100%; margin-bottom:20px }
 }
