--- a/public/frontend/files/plugins/responsive.css
+++ b/public/frontend/files/plugins/responsive.css
@@ -37,4 +37,16 @@
 	.giatricotloi .img img{ height:auto; }
 	.chuongtrinhhoc:before{ width:100%; height:35%; }
 	.chuongtrinhhoc .img img{ width:100%; margin-bottom:20px }
+	.anh .img img{ height:auto; }
+	.header_nav.active #cssmenu > ul > li > a{ color:#fff }
+	
+	/*	trang mỹ*/
+	.row-2 .img img{ height:300px; border-radius: 50px 10px 50px 10px; }
+	.row-2 .col-lg-4 .content{ position:initial; margin-top:15px }
+	.row-3 .list_item .iteam h4{ font-size:1rem; margin-bottom:0 }
+	.row-4 .content{ margin-bottom:20px }
+	.row-5 .iteam h4{ text-align:left; }
+	.row-5 .card-header h5 a{ margin-top:13px }
+	.show{ background:none; position:relative; border:none }
+	.row-8 img{ height:300px }
 }
